# crater

./: .env  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Chapter3.md  Chapter4.md  Dockerfile  Makefile  README.md  mops-architecture.drawio  mops_arch.drawio  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  script.sh  system_arch.drawio
crater-agent/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
crater-agent/config/: agent-runtime.json  compact-mas-deepseekv4pro-tool-discipline-ab.example.json  compact-mas-glm51-tool-discipline.example.json  compact-mas-qwen35flash-tool-discipline.example.json  compact-mas-qwen35plus-tool-discipline.example.json  llm-clients.example.json  llm-clients.json  mas-lite-model-routing.example.json  mas-probe-ablation-qwen36flash.example.json  mas-probe-flash-versioned.example.json  mas-probe-model-routing-extended.example.json  mas-probe-model-routing-tool-discipline.example.json  mas-probe-model-routing.example.json  mas-probe-tool-discipline.example.json  mas-tune-flash.example.json  mas-tune-lite-tool-discipline.example.json  mas-tune-qwen36plus.example.json  offline-bench-framework.example.json  platform-runtime.yaml  platform_conventions.yaml  single-react-tune-lite-qwen36flash.example.json
crater-agent/crater_agent/: app.py  app_quality.py  config.py  internal_tools_router.py  report_utils.py  scenarios.py
crater-agent/docs0511/: README.md  abstract.md  chapter1-introduction.md  chapter2-background.md  chapter3-design.md  chapter4-implementation.md  (+3 more)
(+1702 files in other folders)
